--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -60,6 +60,17 @@
         android:layout_marginBottom="10dp"
         android:layout_marginTop="450dp" />
 
+    <Button
+        android:id="@+id/Scourse"
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content"
+        android:text="Select Courses"
+        android:visibility="gone"
+
+        android:layout_marginTop="210dp" />
+
+
+
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -67,8 +78,9 @@
         android:id="@+id/txtCourses"
         android:layout_centerVertical="true"
         android:layout_centerHorizontal="true"
+
         android:autoText="false"
         android:layout_marginTop="300dp"
-        android:text="Courses:" />
+        android:text="" />
 
 </RelativeLayout>
